# botty

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: testing.yml
examples/task-manager-bot/: .env.example  .gitignore  bot.py  pyproject.toml
examples/task-manager-bot/src/: __init__.py
examples/task-manager-bot/src/handlers/: __init__.py  callbacks.py  start.py  tasks.py
examples/task-manager-bot/src/models/: __init__.py  task.py  user.py
examples/task-manager-bot/src/repositories/: task_repository.py  user_repository.py
examples/task-manager-bot/src/services/: task_service.py
src/botty/: __init__.py  app.py  classes.py  context.py  database.py  exceptions.py  handlers.py  helpers.py
src/botty/adapters/: __init__.py  bot_incoming.py  ptb_bot.py
src/botty/application/: __init__.py  builder.py  runner.py
src/botty/database/: __init__.py  provider.py  sqlite.py
src/botty/di/: __init__.py  container.py  markers.py  resolver.py  scope.py  types.py  utils.py
src/botty/domain/: __init__.py  entities.py  repositories.py  services.py
src/botty/exceptions/: __init__.py  base.py  config.py  database.py  dependencies.py  handlers.py  registry.py  repository.py  responses.py
src/botty/helpers/: __init__.py
src/botty/ports/: __init__.py  bot_client.py
src/botty/responses/: __init__.py  base.py  types.py
src/botty/router/: __init__.py  dependencies.py  discovery.py  handlers.py  registry.py  response_processor.py  router.py  scope.py  typing.py  utils.py  validation.py
src/botty/routing/: __init__.py  discovery.py  registry.py  response_processor.py  router.py  validation.py
src/botty/testing/: __init__.py  bot_client.py  container.py  context.py  database.py  discovery.py  registry.py  scope.py
tests/: conftest.py
tests/unit/application/: test_builder.py  test_runner.py
tests/unit/database/: test_sqlite.py
tests/unit/di/: test_dependencies.py  test_discovery.py
tests/unit/domain/: test_repositories.py
tests/unit/responses/: test_response_types.py
tests/unit/routing/: test_message_registry.py  test_router.py
