[project]
name = "botty"
version = "0.0.1"
description = "Botty brings the elegance of FastAPI's dependency injection and type hints to Telegram bot development. Write clean, testable bot code with automatic dependency resolution, built-in message registry, and a developer-friendly API."
readme = "README.md"
authors = [
    { name = "melaveetha", email = "retromeras@ya.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "python-telegram-bot>=22.6",
    "sqlmodel>=0.0.32",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.uv.workspace]
members = [
    "examples/task-manager-bot",
]

[tool.ty.src]
exclude = [
    "examples/**"
]

[tool.ruff.lint]
ignore=["E402"]
